--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@
 !cmd
 !cmd/**
 !key.pub
-!key.gpg
+!secrets/key.gpg
 !README.md
 !Dockerfile
 !.dockerignore
-!docker.io.token.gpg
+!secrets/docker.io.token.gpg
