--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 !go.mod
 !go.sum
 !main.go
+!main_test.go
 !cmd
 !cmd/**
 !README.md
@@ -21,3 +22,4 @@
 !secrets
 !secrets/docker.io.token.gpg
 !secrets/key.gpg
+  
